sass/_mkto-forms.scss
// Targets Marketo Forms and applies Boostrap styling.
// Extends from _forms.scss


// Apply Boostrap's form-control to relevant elements. High specificity used to override Marketo Styles. 
// Min width prevents revealed hidden fields from collapsing
// Max width prevents flex from increasing column width beyond its parent - weird bug consistently occurs without it
.mktoForm .mktoFormRow .mktoFieldWrap {
    select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] {
        @extend .form-control;
        min-width: 100%;
        max-width: 100%;
    } 
}

// Expand to full width
.mktoForm .mktoFieldWrap {
    width: 100%;
}

// Hide Unnecessary elements
.mktoForm .mktoGutter, .mktoForm .mktoAsterix, .mktoForm .mktoOffset {
    display: none !important;
}

// Reapply Label styles
// Min width prevents revealed hidden labels from collapsing
.mktoForm .mktoFormRow .mktoFieldWrap label.mktoLabel {
    width: 100% !important;
    font-size: 14px;
    margin-bottom: 5px;
    
    min-width: 1px;
}

// Make Rows akin to row divs - they remove extra side margin from the children's gutter padding
// Make Rows flexible
.mktoForm .mktoFormRow {
    margin-left: -15px;
    margin-right: -15px;
    
    display: flex;
    -ms-flex-direction: row;
    -webkit-box-orient: horizontal;
    flex-direction: row; 
    @media (max-width: $screen-xs-max) {
        -ms-flex-direction: column;
        -webkit-box-orient: vertical;
        flex-direction: column; 
    }
}

// Reapply form row margin, add column gutters
// Accommodate any number of columns 
.mktoForm .mktoFormCol {
    padding: 0 15px;
    margin-bottom: 15px !important;
    min-width: 0;
    // Prevents columns from collapsing
    min-height: 60px !important;
    width: 100%;
    flex-grow: 1;
    flex-basis: 0;
}

// Button spacing
.mktoForm .mktoButtonRow {
    padding: 10px 0;
    .mktoButtonWrap {
        margin-left: 0px !important;
    }
}

// Make button purty
.mktoButtonRow .mktoButtonWrap button {
    @extend .btn;
    @extend .btn-soft-magic;
    &:after {
        position: relative;
        line-height: 1;
        top: 2px;
        margin-left: 0.5em;
        font-family: 'Glyphicons Halflings';
        content: "\e131" !important; 
    }
}

// Margin on bottom
.mktoForm form {
    width: 100% !important;
    margin-bottom: 30px;
}

// Fix Extra padding
.mktoForm {
    padding: 0 !important;
}

// Fix Radio button labels
.mktoForm .mktoRadioList label {
    font-weight: normal;
}
.mktoForm .mktoRadioList {
    width: 100%;
}

